# eudox

./: CMakeLists.txt
ext/inc/glad/: gl.h
res/: base.frag  base.vert  outline.frag  outline.vert  postBase.frag  postBase.vert  postInvert.frag  postKernel.frag  rainbow.frag  rainbow.vert  shaded.frag  shaded.vert  shader.frag  shader.vert
res/fonts/: comfortaa.csv  noto.csv
res/models/: icosphere.blend  monke.blend  ngon.blend  test.blend1  torus.blend
res/shaders/: outline.frag  postInvert.frag  postInvert.vert  postKernel.frag  rainbow.frag  rainbow.vert
res/shaders/post/: aberration.frag  base.frag  base.vert  distort.frag  distort.vert  dither.frag  edge.frag  invert.frag  kernel.frag  pixel.frag  sonar.frag
res/shaders/ui/: base.frag  base.vert  font.frag  textured.frag  texturedfract.frag
res/shaders/world/: base.frag  base.geom  base.vert  base_i.vert  circle.frag  explode.frag  explode.geom  explode.vert  flipnormals.vert  flow.frag  font.frag  glitch.geom  glitch.vert  instanced.vert  noise.frag  noise.vert  normal.frag  normals.geom  outline.frag  points.geom  rainbow.frag  raysphere.frag  rayspheres.frag  ripple.vert  shaded.frag  shadedtextured.frag  skybox.frag  test.frag  test.vert  textured.frag  textured.vert  visnormals.geom  wireframe.geom
res/textures/: distort.pdn
src/: app.cpp  app.hpp  camera.cpp  camera.hpp  data.cpp  data.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  scene.cpp  scene.hpp
